# gocia

./: .gitignore  pyproject.toml  spec.md
demos/: Cu100_H.py  gocia_operators.html  mace_gas_phase.py
gocia/: cli.py  config.py  interface.py  newcli.py  plot.py
gocia.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
gocia/analysis/: pourbaix.py
gocia/bias/: gaussianHills.py
gocia/calculator/: __init__.py  mace_calc.py  pipeline.py  stage.py  vasp_calc.py
gocia/database/: db.py  merge.py  schema.py  status.py
gocia/desorption/: base.py  distance.py
gocia/fitness/: __init__.py  che.py
gocia/geom/: __init__.py  build.py
gocia/operators/: __init__.py  base.py  graph_merge.py  graph_splice.py  mutation.py
gocia/population/: individual.py  initializer.py  population.py
gocia/runner/: loop.py
gocia/scheduler/: base.py  local.py  pbs.py  slurm.py
gocia/structure/: __init__.py  adsorbate.py  fingerprint.py  placement.py  slab.py
tests/: conftest.py  test_database.py  test_desorption.py  test_fingerprint.py  test_fitness.py  test_graph_operators.py  test_placement.py  test_population.py
